styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Satoshi", sans-serif;
}

body {
  background-color: #fff;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0.07) 1px,
      transparent 1px
    ),
    linear-gradient(to bottom, rgba(0, 0, 0, 0.07) 1px, transparent 1px);
  background-size: 32px 32px;
  background-attachment: fixed;
  min-height: 100vh;
  padding: 3rem;
  display: flex;
  font-size: 14px;
  align-items: center;
  justify-content: center;
}

#container {
  background: #fff;
  border-radius: 20px;
  padding: 2rem;
  display: flex;
  position: relative;
  flex-direction: column;
  gap: 30px;
  max-width: 600px;
  width: 100%;
  position: relative;
  box-shadow: 6px 6px 0 #000;
  border: 1px solid black;
}

#container h2 {
  font-size: 2rem;
  font-weight: bold;
  color: #111;
}

#container p {
  font-size: 16px;
  color: #555;
}

#form-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.input-container {
  display: flex;
  flex-direction: column;
  gap: 4px;

  label {
    font-size: 16px;
    font-weight: 600;
  }

  input,
  textarea {
    padding: 10px;
    border-radius: 8px;
    outline: none;
    border: 1px solid #555;
    font-family: inherit;
  }

  input.error,
  textarea.error {
    border: 1.2px solid red;
  }

  textarea {
    resize: none;
    height: 120px;
  }
}

#submit-btn {
  padding: 10px;
  cursor: pointer;
  background: #fff500;
  position: relative;
  width: fit-content;
  outline: none;
  font-weight: 500;
  align-self: flex-end;
  border: none;
  transition: all 0.3s ease;
  z-index: 20;
  transform: skewX(-5deg);
  box-shadow: 3px 3px 0 #000;

  &:active {
    box-shadow: none;
  }

  &:disabled {
    opacity: 0.5;
  }
}

#socials-section {
  display: flex;
  width: 100%;
  flex-direction: column;
  gap: 4px;

  .social-container {
    display: flex;
    align-items: center;
    gap: 4px;
    width: 100%;

    select {
      width: 20%;
      padding: 0.5rem 1rem;
      border-radius: 8px;
      border: 1px solid #555;
      background-color: #fff;
      color: #000;
      font-weight: 500;
      font-family: inherit;
      outline: none;
      cursor: pointer;
      appearance: none;
      background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
      background-repeat: no-repeat;
      background-position: right 10px center;
      background-size: 12px;
      transition: all 0.3s ease;

      &:hover {
        border-color: #000;
        background-color: #f9f9f9;
      }
      &:focus {
        border-color: #000;
      }
    }

    input {
      width: 80%;
      padding: 0.4rem;
      border-radius: 6px;
      outline: none;
      border: 1px solid #555;

      &.error {
        border: 1.2px solid red;
      }
    }

    #close-btn {
      outline: none;
      border: none;
      background: none;
      color: red;
      cursor: pointer;
    }
  }

  #add_social_btn {
    padding: 8px 16px;
    cursor: pointer;
    outline: none;
    font-weight: 500;
    align-self: flex-start;
    border-radius: 8px;
    border: 1px solid #ddd;
    background: #111;
    color: #fff;
    font-family: inherit;
    transition: all 0.25s ease;
  }
}

#image-container {
  width: 80px;
  height: 80px;
  overflow: hidden;
  cursor: pointer;
  border-radius: 100%;
  background: rgb(183, 183, 183);

  img {
    width: 100%;
    height: 100%;
    object-position: center;
    object-fit: cover;
  }
}

#toast-container {
  position: fixed;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  z-index: 100;
  height: max-content;
  gap: 12px;
  padding: 1.2rem 1.5rem;
  width: 100%;
  min-height: 100px;

  .toast {
    transform: skewY(-3deg) translateX(100%);
    width: max-content;
    padding: 1.2rem;
    display: flex;
    gap: 12px;
    box-shadow: 6px 6px 0 #000;
    color: white;
    font-size: 12px;
    font-weight: bold;
    opacity: 0;
    animation: slideIn 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;

    &.error {
      background: rgb(162, 5, 5);
    }

    &.success {
      background: rgb(23, 188, 23);
    }

    &.hide {
      animation: slideOut 0.3s ease forwards;
    }
  }
}

@keyframes slideIn {
  0% {
    opacity: 0;
    transform: skewY(-3deg) translateX(100%);
  }
  80% {
    transform: skewY(-3deg) translateX(-10px);
  }
  100% {
    opacity: 1;
    transform: skewY(-3deg) translateX(0);
  }
}
@keyframes slideOut {
  0% {
    opacity: 1;
    transform: skewY(-3deg) translateX(0);
  }
  100% {
    opacity: 0;
    transform: skewY(-3deg) translateX(100%);
  }
}

#success-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  inset: 0;
  z-index: 80;
  background: #0808083e;
  backdrop-filter: blur(2px);
  display: none;
  align-items: center;
  justify-content: center;
  padding: 0.2rem;

  main {
    max-width: 500px;
    width: 100%;
    padding: 0.1rem;
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
    text-align: center;
    gap: 8px;
    padding: 2rem 1rem;
    background: white;
    transform: skewY(-3deg);
    box-shadow: 6px 6px 0 #000;
    animation: scaleUp 0.2s ease-in forwards;

    &.hide{
      animation: scaleDown 0.3s ease forwards;
    }

    #close-modal {
      position: absolute;
      top: 10px;
      right: 10px;
      cursor: pointer;
      background: none;
      border: none;
      outline: none;
    }

    #redirect-btn {
      text-decoration: none;
      cursor: pointer;
      padding: 10px;
      cursor: pointer;
      background: #fff500;
      position: relative;
      width: fit-content;
      outline: none;
      font-weight: 500;
      margin: 10px 0;
      color: #080808;
      border: none;
      transition: all 0.3s ease;
      z-index: 20;
      transform: skewX(-5deg);
      box-shadow: 3px 3px 0 #000;
    }
  }
}

@keyframes scaleUp {
  0% {
    opacity: 0.5;
    transform: skewY(-1deg) scale(0.4);
  }
  100% {
    transform: skewY(-3deg) scale(1);
    opacity: 1;
  }
}
@keyframes scaleDown {
  100% {
    opacity: 0.5;
    transform: skewY(-1deg) scale(0.1);
  }
  0% {
    transform: skewY(-3deg) scale(1);
    opacity: 1;
  }
}

